# RoboNDbetaTest

./: .gitattributes  .gitignore  .gitmodules  readme.md
Archive/the_ball/: model.config  model.sdf
C++WS/: CMakeLists.txt  astar  astar.cpp  realastar.cpp  searchBFS.cpp
P1/: CMakeLists.txt  readme.md
P1/model/HumanoidRobot/: model.sdf
P1/model/HumanoidRobot_color/: model.config  model.sdf
P1/model/building/: model.sdf
P1/model/myWorld/: model.config  model.sdf
P1/script/: welcom_message.cpp
P1/world/: UdacityOffice.world  UdacityWorld  myWorld.world
P3/: notes
P3/catkin_ws/: readme.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
catkin_ws/src/my_map_creator/: CMakeLists.txt  package.xml  readme.md
catkin_ws/src/project3/: CMakeLists.txt  readme.md
catkin_ws/src/simple_arm_mover/: CMakeLists.txt  package.xml  readme.md
catkin_ws2/: readme.md
catkin_ws2/src/practice_pkg/: CMakeLists.txt  package.xml
catkin_ws3/: readme.md
catkin_ws3/rviz/: rviz_config.rviz
catkin_ws_home_service_robot/: readme.md
catkin_ws_home_service_robot/src/add_markers/: CMakeLists.txt  package.xml
catkin_ws_home_service_robot/src/integration/: CMakeLists.txt  package.xml
catkin_ws_home_service_robot/src/maps/: map1.pgm  map2.pgm  map3.pgm  map4.pgm
catkin_ws_home_service_robot/src/pick_objects/: CMakeLists.txt
catkin_ws_home_service_robot/src/rvizConfigs/: add_markers.rviz
catkin_ws_home_service_robot/src/scripts/: add_marker.sh  (+4 more)
catkin_ws_p4/: readme.md  rtabmap.db
(+60 files in other folders)
